# Talent-management

./: .gitignore  HR_User_Guide.md  Home.py  README.md  changes_summary.txt  employee_questions.txt  extract_pdf_text.py  installed_packages.txt  manager_questions.txt  pyproject.toml  requirements.txt  run_cleaning.py
.github/: copilot-instructions.md
.streamlit/: config.toml
Data/: Mena Report - Copy Tech.xlsx
Data/Check-ins 2024 2025/: Mena Report - Copy Tech.xlsx  Mena Report 2025- Copy Tech.xlsx  Mena Report.xlsx  all - Mena Report.xls
Data/Check-ins 2024 2025/2024/: 2024 Employee Performance Check-Ins (manager answers).xlsx  (+1 more)
Data/ITG PA and Check-Ins Questions/: Performance Appraisal Questions - Employees and Managers.xlsx  Performance Appraisal Questions - HR Personnel.xlsx  Performance Appraisal Questions - HR Talent Acquisition.xlsx  Performance Appraisal Questions - HR Talent Management.xlsx  Performance Appraisal Questions - Marcom Department.xlsx
Data/Performance_Appraisals/: Appraisal From Report.xlsx
hr_analytics/: __init__.py
hr_analytics/services/: checkin_cleaner_excel.py  column_detection.py  extraction.py  github_models_client.py  kpis.py  nlp_analyzer.py  nlp_schema.py  nlp_service.py  nlp_service_2025.py  normalizers.py  performance_appraisal.py  presentation.py  text_analysis.py
hr_analytics/ui/: downloads.py  style.py
outputs/: Employee_Performance_CheckIn_CLEAN.xlsx  Performance_CheckIn_CLEAN.xlsx
pages/: Employee_Turnover.py  NLP_Insights.py  check_ins.py  performance_appraisals.py
(+11 files in other folders)
